# evals

./: .gitignore  README.md  model_utils.py  pyproject.toml  routstr_bot.py  wallet.py
evals_wallet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
